formated text. Added my photo

--- a/index.html
+++ b/index.html
@@ -12,23 +12,26 @@
 <body>
     <main class="card">
         <section class="card__photo">
-            <img class="card__photo-img" src="avatar.png" alt="my photo" />
+            <img class="card__photo-img" src="tomek.jpg" alt="my photo" />
         </section>
-
         <article class="card__top">
             <h1 class="card__top-header">Tomasz Koza</h1>
             <h4 class="card__top-subtitle">junior frontend developer</h4>
         </article>
         <div class="card__description">
-            Mabey not very young but extremly fascinated in frontend development. Eager to learn and develop. Currentyl participant in WTF course. Owner of two old computers that can make miricles. Student of University of Dąbrowa Górnicza and my field of study is
-            International business. In case of communication I speak fluently in Polish and my level of English language is between B1-B2.
+            Maybe not very young but extremly fascinated in <a>frontend development.</a> Eager to learn and
+            <a>develop</a>. Currentyl
+            participant in WTF course. Owner of two old computers that can make miricles. Student of <a>University of
+                Dąbrowa Górnicza</a> and my field of study is International business. In case of communication I speak
+            fluently in Polish and my level of <a>English language
+                is between B1-B2.</a>
         </div>
         <div class="card__social">
-            <p>find me:
+            <a>find me:
                 <a class="card__social-a" href="">FaceBook</a>
                 <a class="card__social-a" href="">Linkedin</a>
                 <a class="card__social-a" href="">GitHub</a>
-            </p>
+            </a>
 
         </div>
     </main>
