final shape of Business-Card-2020

--- a/index.html
+++ b/index.html
@@ -12,26 +12,29 @@
 <body>
     <main class="card">
         <section class="card__photo">
-            <img class="card__photo-img" src="tomek.jpg" alt="my photo" />
+            <div class="card__photo-img"></div>
         </section>
         <article class="card__top">
             <h1 class="card__top-header">Tomasz Koza</h1>
             <h4 class="card__top-subtitle">junior frontend developer</h4>
         </article>
         <div class="card__description">
-            Maybe not very young but extremly fascinated in <a>frontend development.</a> Eager to learn and
-            <a>develop</a>. Currentyl
-            participant in WTF course. Owner of two old computers that can make miricles. Student of <a>University of
-                Dąbrowa Górnicza</a> and my field of study is International business. In case of communication I speak
-            fluently in Polish and my level of <a>English language
-                is between B1-B2.</a>
+            Maybe not very young but extremly fascinated in <strong class="strong">frontend development.</strong> Eager
+            to learn and
+            <strong class="strong">develop</strong>. Currentyl
+            participant in WTF course. Owner of two old computers that can make miricles. Student of <strong
+                class="strong">University of
+                Dąbrowa Górnicza</strong> and my field of study is International business. In case of communication I
+            speak
+            fluently in Polish and my <strong class="strong">level of English language
+                is between B1-B2.</strong>
         </div>
         <div class="card__social">
-            <a>find me:
-                <a class="card__social-a" href="">FaceBook</a>
-                <a class="card__social-a" href="">Linkedin</a>
-                <a class="card__social-a" href="">GitHub</a>
-            </a>
+            find me:
+            <a class="card__social-a" href="">FaceBook</a>
+            <a class="card__social-a" href="">Linkedin</a>
+            <a class="card__social-a" href="">GitHub</a>
+
 
         </div>
     </main>
