subtitles in <p>, img in div instead section, img as img not background, changed semantic

--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 
 <body>
     <main class="card">
-        <section class="card__photo">
-            <div class="card__photo-img"></div>
-        </section>
-        <article class="card__top">
+        <div class="card__photo">
+            <img class="card__photo-img" src="tomek1.jpg" alt="Tom's photo" />
+        </div>
+        <section class="card__main">
             <h1 class="card__top-header">Tomasz Koza</h1>
-            <h4 class="card__top-subtitle">junior frontend developer</h4>
-        </article>
-        <div class="card__description">
+            <p class="card__top-subtitle">junior frontend developer</p>
+               <div class="card__description">
             Maybe not very young but extremly fascinated in <strong class="strong">frontend development.</strong> Eager
             to learn and
             <strong class="strong">develop</strong>. Currentyl
@@ -29,14 +28,15 @@
             fluently in Polish and my <strong class="strong">level of English language
                 is between B1-B2.</strong>
         </div>
-        <div class="card__social">
+        </section>
+        <footer class="card__social">
             find me:
             <a class="card__social-a" href="">FaceBook</a>
             <a class="card__social-a" href="">Linkedin</a>
             <a class="card__social-a" href="">GitHub</a>
 
 
-        </div>
+        </footer>
     </main>
 
 </body>
